2008-10-24  Joe English  <jenglish@users.sourceforge.net>

	* tests/ttk/ttk.test: Disable test ttk-6.3, it's not 
	applicable [Bug 2175411].

	* generic/ttk/ttkTheme.c: Use different Tcl_AssocData key
	so the tile extension can be loaded into an 8.6 interp,
	in the off-chance that anyone wants to do this.

2008-10-24  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkCanvUtil.c (TkSmoothPrintProc): Corrected 'const'ness to
	quell warning. [Bug 2190619]

2008-10-23  Don Porter  <dgp@users.sourceforge.net>

	* README:		Bump version number to 8.6a4
	* generic/tk.h:
	* library/tk.tcl:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:

	* unix/configure:	autoconf-2.59
	* win/configure:

2008-10-22  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tk.h:               CONST -> const and white-spacing
	* generic/tk.decls
	* generic/tkInt.decls
	* generic/tkDecls.h:          (regenerated)
	* generic/tkIntDecls.h:       (regenerated)
	* generic/tkIntPlatDecls.h:   (regenerated)
	* generic/tkIntXlibDecls.h:   (regenerated)
	* generic/tkPlatDecls.h:      (regenerated)
	* generic/ttk/tk.decls
	* generic/ttk/ttkDecls.h      (regenerated)
	* generic/ttk/ttkGenStubs.tcl

2008-10-20  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkBusy.c, macosx/tkMacOSXEmbed.c, unix/tkUnixEmbed.c:
	* win/tkWinWindow.c: Factor out the platform-specific parts into the
	platform directories. [Bug 2180919]

2008-10-18  Donal K. Fellows  <dkf@users.sf.net>

	TIP #321 IMPLEMENTATION

	* generic/tkBusy.c, doc/busy.n, tests/busy.test: Implementation of the
	[tk busy] command. [Patch 1997907]

2008-10-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinFont.c: [Bug 1825353] To fix a problem with tiny fonts on
	Russian versions of Windows we will avoid removing the internal
	leading for fixed width fonts.

2008-10-15  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tk.h:          Add "const" to many internal const tables, so